--- a/public/css/customerDashboard.css
+++ b/public/css/customerDashboard.css
@@ -13,7 +13,7 @@
   padding: 2rem;
   background-color: #f8f9fa;
   min-height: calc(100vh - 76px);
-  margin-top: 76px;
+  /* margin-top: 76px; */
 }
 
 .section-header {
